--- a/app.json
+++ b/app.json
@@ -58,5 +58,5 @@
               "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
           }
       ],
-      "stack": "heroku-22"
+      "stack": "container"
   }
